# mobileguard

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  self-scan.yml
docs/: index.html  paper.html
examples/: github_actions.yml  mobileguard.json  scan_ios_project.sh
mobileguard/: __init__.py  app_store.py  audit.py  cli.py  contract.py  llm.py  models.py  releases.py  scanner.py  surface.py  swift.py  test_rules.py  tier.py
mobileguard/detectors/: __init__.py  dart.py  javascript.py  kotlin.py  swift.py
mobileguard/rules/: __init__.py  app_store.py  code_execution.py  eu_ai_act.py  google_play.py  owasp_mobile.py  privacy_manifest.py
tests/: __init__.py  test_audit.py  test_cli.py  test_contract.py  test_releases.py  test_rules.py  test_scanner.py  test_surface.py  test_tier.py
tests/fixtures/dart/: violation_ai_disclosure.dart
tests/fixtures/javascript/: violation_ai_disclosure.js
tests/fixtures/kotlin/: violation_ai_disclosure.kt
tests/fixtures/swift/: violation_ai_disclosure.swift
tests/fixtures/swift/pass_as006_complete/: PrivacyInfo.xcprivacy
tests/fixtures/swift/pass_as007_external/: ContentViewController.swift
tests/fixtures/swift/surface_safe_intents/: OpenTabIntent.swift
tests/fixtures/swift/surface_test/: PaymentIntent.swift
tests/fixtures/swift/violation_as006_no_manifest/: NetworkService.swift
tests/fixtures/swift/violation_as007_jseval/: ScriptRunner.swift
tests/fixtures/swift/violation_as007_webview/: ContentViewController.swift
tests/fixtures/swift/violation_privacy_manifest/: NetworkService.swift
tests/fixtures/swift/violation_privacy_manifest_mismatch/: NetworkService.swift  PrivacyInfo.xcprivacy
